# pendulums

./: .gitignore  README.MD  colormap_gen.ipynb  display_trajectory.py  generate_trajectory.py  k_n_pendulum.py  k_n_pendulum_jax.py  k_n_pendulum_jax_vispy.py  math.ipynb  n_pendulum.py  n_pendulum_numpy.py  pendulum_stability_fractal.py  pendulums.py  profiling.ipynb  py5_k_n_pendulum.py  pyproject.toml  spring_cart_pendulum.py  variational_perturb_n_pendulum.py  video_output.py
